<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_toponav_nav2_bt</name>
  <version>0.1.0</version>
  <description>
    Nav2 behavior-tree plugins that consume the v1.0-locked
    SemanticWaypointArray wire format produced by semantic-toponav and
    dispatch it to the Nav2 motion stack via NavigateThroughPoses.
    Bridges the semantic-graph planning layer (Python, out-of-repo) to
    the Nav2 BT runtime without going through Python at runtime.
  </description>
  <maintainer email="opensource@example.com">semantic-toponav contributors</maintainer>
  <license>Apache-2.0</license>
  <url type="repository">https://github.com/rsasaki0109/semantic-toponav-nav2-bt</url>
  <url type="bugtracker">https://github.com/rsasaki0109/semantic-toponav-nav2-bt/issues</url>
  <author email="opensource@example.com">semantic-toponav contributors</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>semantic_toponav_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugins.xml" />
  </export>
</package>
